--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">PelotaMovimiento</string>
+    <string name="app_name">GestionAlumnos</string>
 </resources>
